--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookStoreWebClient;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
