--- a/BookStore/BookStoreWebClient.csproj
+++ b/BookStore/BookStoreWebClient.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookStoreAPI\BookStoreAPI.csproj" />
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
   </ItemGroup>
 
