--- a/BookStoreAPI/appsettings.json
+++ b/BookStoreAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DANA-ISCHG;Initial Catalog=BookStore;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
