--- a/BusinessObjects/appsettings.json
+++ b/BusinessObjects/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DATDM;Database=BookStore;uid=sa;pwd=15102003;TrustServerCertificate=true;"
   }
 }
