--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DATDM;Database=BookStore;uid=sa;pwd=15102003;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=DESKTOP-008IE80;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=0956134544aaa"
   },
   "Logging": {
     "LogLevel": {
