--- a/BusinessObjects/appsettings.json
+++ b/BusinessObjects/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=0956134544aaa;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=DESKTOP-008IE80;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=0956134544aaa"
   }
 }
