--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=DANA-ISCHG;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=tran0903"
   },
   "Logging": {
     "LogLevel": {
