--- a/BookStoreAPI/appsettings.json
+++ b/BookStoreAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=DESKTOP-008IE80;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=0956134544aaa"
   },
   "Logging": {
     "LogLevel": {
