--- a/BookStore/appsettings.Development.json
+++ b/BookStore/appsettings.Development.json
@@ -1,9 +1,3 @@
 {
-  "BaseAddress": "https://localhost:7269",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "BaseAddress": "https://localhost:7269"
 }
