--- a/BookStore/appsettings.Production.json
+++ b/BookStore/appsettings.Production.json
@@ -1,9 +1,3 @@
 {
-  "BaseAddress": "https://localhost:8080",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "BaseAddress": "http://localhost:8080"
 }
