--- a/BusinessObjects/appsettings.json
+++ b/BusinessObjects/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-008IE80;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=0956134544aaa"
+    "DefaultConnection": "Data Source=DANA-ISCHG;TrustServerCertificate=True; Initial Catalog=BookStore;User ID=sa;Password=tran0903"
   }
 }
