--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DATDM;Database=BookStore;uid=sa;pwd=15102003;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DESKTOP-008IE80;Database=BookStore;uid=sa;pwd=0956134544aaa;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
