change PK in Cartdetail

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DANA-ISCHG;Database=BookStore;uid=sa;pwd=tran0903;TrustServerCertificate=true;",
+    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookStoreWebClient;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
