Delete redundant files

--- a/BusinessObjects/appsettings.json
+++ b/BusinessObjects/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-008IE80;Database=BookStore;uid=sa;pwd=0956134544aaa;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DATDM;Database=BookStore;uid=sa;pwd=15102003;TrustServerCertificate=true;"
   }
 }
